--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Godot 4+ specific ignores
 .godot/
 android/
-addons/
+addons/godotopenxrvendors/
+addons/godot-xr-tools/
 project.godot
 project
 project.godot
