--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="OculusQuest2"
+name="OculusQuest3"
 platform="Android"
 runnable=true
 dedicated_server=false
@@ -28,7 +28,7 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
+package/unique_name="com.example.godot_vr_demo"
 package/name=""
 package/signed=true
 package/app_category=2
