calculo ambiguedad unificado

--- a/historialCalculosAmbiguedad.cfg
+++ b/historialCalculosAmbiguedad.cfg
@@ -37,3 +37,11 @@ tiempoDecicion=22.6925
 tiempoTotal=72.6916
 destinosCorrectos=2
 destinosIncorrectos=3
+
+[partida_2024-03-14_02:14:48]
+
+velocidadPromedio=11.3246
+tiempoDecicion=0
+tiempoTotal=18.8181
+destinosCorrectos=0
+destinosIncorrectos=0
