calculo ambiguedad gameover

--- a/historialCalculosAmbiguedad.cfg
+++ b/historialCalculosAmbiguedad.cfg
@@ -45,3 +45,59 @@ tiempoDecicion=0
 tiempoTotal=18.8181
 destinosCorrectos=0
 destinosIncorrectos=0
+
+[partida_2024-04-19_00:23:01]
+
+velocidadPromedio=22.167
+tiempoDecicion=47.7043
+tiempoTotal=66.7187
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_00:29:53]
+
+velocidadPromedio=23.1746
+tiempoDecicion=47.0348
+tiempoTotal=60.8794
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_00:37:00]
+
+velocidadPromedio=23.081
+tiempoDecicion=50.9188
+tiempoTotal=60.3398
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_00:57:51]
+
+velocidadPromedio=23.052
+tiempoDecicion=47.19
+tiempoTotal=60.8811
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_01:02:58]
+
+velocidadPromedio=23.0675
+tiempoDecicion=40.036
+tiempoTotal=61.8589
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_01:07:47]
+
+velocidadPromedio=24.7042
+tiempoDecicion=41.847
+tiempoTotal=56.5591
+destinosCorrectos=1
+destinosIncorrectos=0
+
+[partida_2024-04-19_01:09:21]
+
+velocidadPromedio=24.7949
+tiempoDecicion=46.533
+tiempoTotal=57.3431
+destinosCorrectos=1
+destinosIncorrectos=0
