Actualizacion de propts mapas

--- a/historialCalculosAmbiguedad.cfg
+++ b/historialCalculosAmbiguedad.cfg
@@ -101,3 +101,19 @@ tiempoDecicion=46.533
 tiempoTotal=57.3431
 destinosCorrectos=1
 destinosIncorrectos=0
+
+[partida_2024-04-19_14:09:35]
+
+velocidadPromedio=12.6205
+tiempoDecicion=110.322
+tiempoTotal=218.459
+destinosCorrectos=2
+destinosIncorrectos=0
+
+[partida_2024-04-19_15:29:10]
+
+velocidadPromedio=5.86432
+tiempoDecicion=161.58
+tiempoTotal=257.132
+destinosCorrectos=1
+destinosIncorrectos=0
