--- a/historialCalculosAmbiguedad.cfg
+++ b/historialCalculosAmbiguedad.cfg
@@ -117,3 +117,52 @@ tiempoDecicion=161.58
 tiempoTotal=257.132
 destinosCorrectos=1
 destinosIncorrectos=0
+
+[partida_2024-05-07_09:07:28]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=0
+destinosIncorrectos=1
+
+[partida_2024-05-07_09:08:43]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=0
+destinosIncorrectos=1
+
+[partida_2024-05-07_09:09:17]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=1
+destinosIncorrectos=1
+
+[partida_2024-05-07_09:09:18]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=1
+destinosIncorrectos=3
+
+[partida_2024-05-07_09:09:38]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=0
+destinosIncorrectos=1
+
+[partida_2024-05-07_09:10:22]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=1
+destinosIncorrectos=1
+
+[partida_2024-05-07_09:10:23]
+
+velocidadPromedio=10
+tiempoTotal=0.0
+destinosCorrectos=1
+destinosIncorrectos=3
